--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -4,12 +4,14 @@
     background-color: #95dada;
     border: 1px solid grey;
     border-radius: 5px;
-    padding: 25px;
+    padding: 1em;
     cursor: pointer;
     -moz-osx-font-smoothing: grayscale;
     backface-visibility: hidden;
     transform: translateZ(0);
     transition: transform 0.25s ease-out;
+    font-family: 'Roboto';
+    font-weight: 100;
   }
   
   .card-container:hover {
