--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -3,8 +3,10 @@
     border: none;
     outline: none;
     padding: 10px;
-    width: 150px;
-    line-height: 30px;
+    width: 200px;
+    line-height: 25px;
     margin-bottom: 30px;
+    font-family: 'Roboto';
+    font-weight: 100;
   }
   
